--- a/goit-react-hw-03-image-finder-main/package.json
+++ b/goit-react-hw-03-image-finder-main/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-03-image-finder",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sergantstar.github.io/goit-react-hw-03-image-finder/",
+  "homepage": "https://vunzhakova.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -10,9 +10,9 @@
     "axios": "^0.27.2",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
