--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
+
 {
-  "name": "goit-react-hw-03-image-finder",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sergantstar.github.io/goit-react-hw-03-image-finder/",
+  "homepage": "https://goitacademy.github.io/react-homework-template/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
